# good-start

./: .gitignore  .pre-commit-config.yaml  404.html  Containerfile  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.github/workflows/: docs.yml  publish.yml  tests.yml
cli/: index.html
docs/: cli.md  examples.md  index.md  pytest-plugin.md
examples/: index.html
pytest-plugin/: index.html
search/: search_index.json
src/good_start/: _entrypoint.py  agent.py  cli.py  display.py  loader.py  plugin.py  prompt.md  result.py
src/good_start/runtime/: __init__.py  _base.py  _container.py  _local.py
tests/: test_cli.py  test_display.py  test_entrypoint.py  test_loader.py  test_plugin.py  test_runtime.py
