[project]
name = "good-start"
version = "0.1.0"
description = "Test whether a codebase's getting-started documentation is accurate and easy to follow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "cldixon" }]
keywords = ["documentation", "testing", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "claude-agent-sdk>=0.1.30",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-frontmatter>=1.1.0",
    "rich>=14.3.2",
    "typer>=0.16",
]

[project.urls]
Homepage = "https://github.com/cldixon/good-start"
Repository = "https://github.com/cldixon/good-start"
Issues = "https://github.com/cldixon/good-start/issues"

[project.scripts]
good-start = "good_start.cli:app"

[project.entry-points."pytest11"]
good-start = "good_start.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "mkdocs>=1.6",
    "mkdocs-terminal>=4.8",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
